# cmocka

./: AddCMockaTest.cmake  CMakeLists.txt
cmake/Modules/: AddCMockaTest.cmake
include/: CMakeLists.txt  cmocka.h
src/: CMakeLists.txt  cmocka.c
